Most html and css complete.

--- a/web pages copy/index/index.html
+++ b/web pages copy/index/index.html
@@ -4,43 +4,44 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>African Marketplace</title>
+    <title>Saudi Africa</title>
 
-    <link href="../../web pages/index/index.css" rel="stylesheet" type="text/CSS">
+    <link href="../../web pages copy/index/index.css" rel="stylesheet" type="text/CSS">
 </head>
 
 <header class="header">
-    <h1>African Marketplace</h1>
+    <h1>Saudi Africa</h1>
 
-    <button>Login</button>
+    <button>Sign Up</button>
 
 </header>
 <body>
 <main>
-    <section>
+    <section class="sectionOne">
         <div class="image">
-            <img src="../../assets/index.assets/tradeOnPhones.1.jpg">
+            <img src="../../assets copy/index.assets/tradeONPhones.2.jpg" alt="working with Saudi site on cellphone in market">
         </div>
-        <h2>Heading 1</h2>
+        <h2>Sauti Trade & Market Information Platform</h2>
         <hr>
-        <p class="info">With the ever growing impact of science on our lives, religion and spirituality have a greater role to play reminding us of our humanity. There is no contradiction between the two. Each gives us valuable insights into the other. Both science and the teachings of the Buddha tell us of the fundamental unity of all things.</p>
+        <p class="info">With our mobile-based platform, any trader with a basic mobile phone can access real-time market prices, exchange rates and trade procedures. Our platform leverages the ubiquity of mobile phones and innovates on USSD and SMS technologies to enhance delivery channels of the information necessary for East Africa’s cross-border traders.</p>
 
     </section>
-
-    <section>
-        
-        <h2>Heading 2</h2>
+    <hr id="border">
+    <section class="sectionTwo">
+        <div class="image">
+            <img src="../../assets copy/index.assets/Tanzania.jpg" alt="Tanzanian women using Saudi site on cellphones">
+        </div>
+        <h2>Saudi Surveys & Stakeholder Mapping</h2>
         <hr>
-        <p class="info">Our ancestors viewed the earth as rich and bountiful, which it is. Many people in the past also saw nature as inexhaustibly sustainable, which we know is the case only if we care for it. It is not difficult to forgive destruction in the past that resulted from ignorance. Today, however, we have access to more information, and it is essential that we re-examine ethically what we have inherited, what we are responsible for, and what we will pass on to coming generations.</p>
+        <p class="info">Sauti’s nuanced understanding of the needs that face East African cross-border traders when identifying trade opportunities, complying with trade regulations, and negotiating favourable prices in foreign markets, combined with our innovative approaches to survey implementation and data-collection allow Sauti to provide enhanced stakeholder mapping with unprecedented reach and accuracy.</p>
 
     </section>
 </main>
 </body>
 <footer>
-    <h3>Heading 3?</h3>
-    <p>Every one of us is getting older, which is a natural process.</p>
-    <div class="footerButtons">
-        <button>Sign Up</button>
-        <button>About Us</button>
+    <h3>Ready to give Sauti a try?</h3>
+    <p class="footerP">Learn more by signing up or checkout our team.</p>
+    <div class="footerButton">
+        <button href="../../web pages copy/about/about.html">About Us</button>
     </div>
 </footer>
