Buttons functional on index and about pages.

--- a/web pages copy/about/about.html
+++ b/web pages copy/about/about.html
@@ -13,7 +13,7 @@
 
     <h1>About Us</h1>
 
-    <button href="../../web pages copy/index/index.html">Home</button>
+    <button><a href="../../web pages copy/index/index.html">Home</a></button>
 
 </header>
 <main class="aboutSec">
@@ -86,6 +86,6 @@
 
 <footer>
 
-    <button id="footerButton">Sign Up</button>
+    <button id="footerButton"><a href="#">Sign Up</a></button>
 
 </footer>
