--- a/web pages copy/index/index.html
+++ b/web pages copy/index/index.html
@@ -12,7 +12,7 @@
 <header class="header">
     <h1>Saudi Africa</h1>
 
-    <button>Sign Up</button>
+    <button><a href="#">Sign Up</a></button>
 
 </header>
 <body>
@@ -42,6 +42,6 @@
     <h3>Ready to give Sauti a try?</h3>
     <p class="footerP">Learn more by signing up or checkout our team.</p>
     <div class="footerButton">
-        <button href="../../web pages copy/about/about.html">About Us</button>
+        <button><a href="../../web pages copy/about/about.html">About Us</a></button>
     </div>
 </footer>
