fixed css pathes.

--- a/web-pages-copy/about/about.html
+++ b/web-pages-copy/about/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>African Marketplace</title>
 
-    <link href="../../web-pages-copy/about/about.css" rel="stylesheet" type="text/CSS">
+    <link href="./about.css" rel="stylesheet" type="text/CSS">
 </head>
 
 <header class="header">
