--- a/web-pages-copy/index/index.html
+++ b/web-pages-copy/index/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saudi Africa</title>
 
-    <link href="../../web-pages-copy/index/index.css" rel="stylesheet" type="text/CSS">
+    <link href="./index.css" rel="stylesheet" type="text/CSS">
 </head>
 
 <header class="header">
