fixed images and button references.

--- a/web-pages-copy/index/index.html
+++ b/web-pages-copy/index/index.html
@@ -19,7 +19,7 @@
 <main>
     <section class="sectionOne">
         <div class="image">
-            <img src="../../assets-copy/index.assets/tradeONPhones.2.jpg" alt="working with Saudi site on cellphone in market">
+            <img src="../assets-copy/index.assets/tradeONPhones.2.jpg" alt="working with Saudi site on cellphone in market">
         </div>
         <h2>Sauti Trade & Market Information Platform</h2>
         <hr>
@@ -29,7 +29,7 @@
     <hr id="border">
     <section class="sectionTwo">
         <div class="image">
-            <img src="../../assets-copy/index.assets/Tanzania.jpg" alt="Tanzanian women using Saudi site on cellphones">
+            <img src="../assets-copy/index.assets/Tanzania.jpg" alt="Tanzanian women using Saudi site on cellphones">
         </div>
         <h2>Saudi Surveys & Stakeholder Mapping</h2>
         <hr>
@@ -42,6 +42,6 @@
     <h3>Ready to give Sauti a try?</h3>
     <p class="footerP">Learn more by signing up or checkout our team.</p>
     <div class="footerButton">
-        <button><a href="../../web-pages-copy/about/about.html">About Us</a></button>
+        <button><a href="../about/about.html">About Us</a></button>
     </div>
 </footer>
