--- a/web-pages-copy/about/about.html
+++ b/web-pages-copy/about/about.html
@@ -13,13 +13,13 @@
 
     <h1>About Us</h1>
 
-    <button><a href="../../web-pages-copy/index/index.html">Home</a></button>
+    <button><a href="../index/index.html">Home</a></button>
 
 </header>
 <main class="aboutSec">
     <section id="secOne">
         
-        <img class="image" src="../../assets-copy/about.assets/Clare-Jackson.jpeg" alt="photo of Clare Jackson"/>
+        <img class="image" src="../assets-copy/about.assets/Clare-Jackson.jpeg" alt="photo of Clare Jackson"/>
 
         <div class="info">
             <h2>Clare Jackson</h2>
@@ -33,7 +33,7 @@
 
     <section id="secTwo">
 
-        <img class="image" src="../../assets-copy/about.assets/Sathya-Ganesan.jpeg" alt="photo of Sathya Ganesan"/>
+        <img class="image" src="../assets-copy/about.assets/Sathya-Ganesan.jpeg" alt="photo of Sathya Ganesan"/>
 
         <div class="info">
             <h2>Sathya Ganesan</h2>
@@ -46,7 +46,7 @@
 
     <section id="secThree">
 
-        <img class="image" src="../../assets-copy/about.assets/Stephen-Goodrick.jpeg" alt="photo of Stephen Goodrick"/>
+        <img class="image" src="../assets-copy/about.assets/Stephen-Goodrick.jpeg" alt="photo of Stephen Goodrick"/>
 
         <div class="info">
             <h2>Stephen Goodrick</h2>
@@ -59,7 +59,7 @@
 
     <section id="secFour">
 
-        <img class="image" src="../../assets-copy/about.assets/Ben-Venker.jpeg" alt="photo of Ben Venker"/>
+        <img class="image" src="../assets-copy/about.assets/Ben-Venker.jpeg" alt="photo of Ben Venker"/>
 
         <div class="info">
             <h2>Ben Venker</h2>
@@ -72,7 +72,7 @@
 
     <section id="secFive">
 
-        <img class="image" src="../../assets-copy/about.assets/Joshua-Dunson.jpeg" alt="photo of Joshua Dunson"/>
+        <img class="image" src="../assets-copy/about.assets/Joshua-Dunson.jpeg" alt="photo of Joshua Dunson"/>
 
         <div class="info">
             <h2>Joshua Dunson</h2>
