--- a/web-pages-copy/about/about.html
+++ b/web-pages-copy/about/about.html
@@ -19,7 +19,7 @@
 <main class="aboutSec">
     <section id="secOne">
         
-        <img class="image" src="../assets-copy/about.assets/Clare-Jackson.jpeg" alt="photo of Clare Jackson"/>
+        <img class="image" src="https://ca.slack-edge.com/ESZCHB482-W0177GDP2JK-3f7ff1ac9b5d-512" alt="photo of Clare Jackson"/>
 
         <div class="info">
             <h2>Clare Jackson</h2>
