--- a/web-pages-copy/about/about.html
+++ b/web-pages-copy/about/about.html
@@ -33,7 +33,7 @@
 
     <section id="secTwo">
 
-        <img class="image" src="../assets-copy/about.assets/Sathya-Ganesan.jpeg" alt="photo of Sathya Ganesan"/>
+        <img class="image" src="https://ca.slack-edge.com/ESZCHB482-W0149M6GSBE-6594a35550ac-512" alt="photo of Sathya Ganesan"/>
 
         <div class="info">
             <h2>Sathya Ganesan</h2>
@@ -46,7 +46,7 @@
 
     <section id="secThree">
 
-        <img class="image" src="../assets-copy/about.assets/Stephen-Goodrick.jpeg" alt="photo of Stephen Goodrick"/>
+        <img class="image" src="https://ca.slack-edge.com/ESZCHB482-W012X6XTCU9-d3397c2802a2-512" alt="photo of Stephen Goodrick"/>
 
         <div class="info">
             <h2>Stephen Goodrick</h2>
@@ -59,7 +59,7 @@
 
     <section id="secFour">
 
-        <img class="image" src="../assets-copy/about.assets/Ben-Venker.jpeg" alt="photo of Ben Venker"/>
+        <img class="image" src="https://ca.slack-edge.com/ESZCHB482-W012BRRSR46-601b7771bb4f-512" alt="photo of Ben Venker"/>
 
         <div class="info">
             <h2>Ben Venker</h2>
@@ -72,7 +72,7 @@
 
     <section id="secFive">
 
-        <img class="image" src="../assets-copy/about.assets/Joshua-Dunson.jpeg" alt="photo of Joshua Dunson"/>
+        <img class="image" src="https://ca.slack-edge.com/ESZCHB482-W0138D97YRE-72b3d2aa5c9f-512" alt="photo of Joshua Dunson"/>
 
         <div class="info">
             <h2>Joshua Dunson</h2>
