changed file structure of index and about html and css pages.

--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>African Marketplace</title>
 
-    <link href="./about.css" rel="stylesheet" type="text/CSS">
+    <link href="/about.css" rel="stylesheet" type="text/CSS">
 </head>
 
 <header class="header">
 
     <h1>About Us</h1>
 
-    <button><a href="../index/index.html">Home</a></button>
+    <button><a href="/index.html">Home</a></button>
 
 </header>
 <main class="aboutSec">
