--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <button><a href="/index.html">Home</a></button>
 
 </header>
+
 <main class="aboutSec">
     <section id="secOne">
         
@@ -23,7 +24,7 @@
 
         <div class="info">
             <h2>Clare Jackson</h2>
-            <hr>
+            <hr> <!--heading divider-->
             <p class="duties">Web UI Developer</p>
             <p>clare-jackson@lambdastudents.com</p>
             <nav><a href="https://github.com/clarejackson">https://github.com/clarejackson</a></nav>
@@ -37,7 +38,7 @@
 
         <div class="info">
             <h2>Sathya Ganesan</h2>
-            <hr>
+            <hr> <!--heading divider-->
             <p class="duties">Front End Developer</p>
             <p>sathya-ganesan@lambdastudents.com</p>
             <nav><a href="https://github.com/sathyaganesan">https://github.com/sathyaganesan</a></nav>
@@ -50,7 +51,7 @@
 
         <div class="info">
             <h2>Stephen Goodrick</h2>
-            <hr>
+            <hr> <!--heading divider-->
             <p class="duties">Front End Framework Developer</p>
             <p>stephen-goodrick@lambdastudents.com</p>
             <nav><a href="https://github.com/sgoodrickjr">https://github.com/sgoodrickjr</a></nav>
@@ -63,7 +64,7 @@
 
         <div class="info">
             <h2>Ben Venker</h2>
-            <hr>
+            <hr> <!--heading divider-->
             <p class="duties">Backend Developer</p>
             <p>ben-venker@lambdastudents.com</p>
             <nav><a href="https://github.com/benvenker">https://github.com/benvenker</a></nav>
@@ -76,7 +77,7 @@
 
         <div class="info">
             <h2>Joshua Dunson</h2>
-            <hr>
+            <hr> <!--heading divider-->
             <p class="duties">Backend Developer</p>
             <p>joshua-dunson@lambdastudents.com</p>
             <nav><a href="https://github.com/JDunson98">https://github.com/JDunson98</a></nav> 
